# issue-magic

./: .gitignore  .goreleaser.yaml  Cargo.toml  README.md
src/: main.rs
