[package]
name = "issue-magic"
version = "0.1.0"
edition = "2021"

[dependencies]
anthropic = "0.0.8"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
octocrab = "0.42.1"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
